mql/parser/mql_parser.go
// Code generated from Mql.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // Mql

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'?'", "'='", "'.'", "'['", "']'", "'GET'", "'SET'", "", "'=>'", "','",
	"'{'", "'}'", "';'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "GET", "SET", "WHITESPACE", "ASSOC", "COMMA", "LEFT_BRACE",
	"RIGHT_BRACE", "SEMICOLON", "Identifier", "StringLiteral", "IntegerLiteral",
}

var ruleNames = []string{
	"stringVal", "stmt", "getStmt", "setStmt", "columnSpec", "tableName", "columnFamilyName",
	"valueExpr", "cellValue", "columnMapValue", "superColumnMapValue", "columnMapEntry",
	"superColumnMapEntry", "columnOrSuperColumnName", "rowKey", "columnOrSuperColumnKey",
	"columnKey", "superColumnKey",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type MqlParser struct {
	*antlr.BaseParser
}

func NewMqlParser(input antlr.TokenStream) *MqlParser {
	this := new(MqlParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Mql.g4"

	return this
}

// MqlParser tokens.
const (
	MqlParserEOF            = antlr.TokenEOF
	MqlParserT__0           = 1
	MqlParserT__1           = 2
	MqlParserT__2           = 3
	MqlParserT__3           = 4
	MqlParserT__4           = 5
	MqlParserGET            = 6
	MqlParserSET            = 7
	MqlParserWHITESPACE     = 8
	MqlParserASSOC          = 9
	MqlParserCOMMA          = 10
	MqlParserLEFT_BRACE     = 11
	MqlParserRIGHT_BRACE    = 12
	MqlParserSEMICOLON      = 13
	MqlParserIdentifier     = 14
	MqlParserStringLiteral  = 15
	MqlParserIntegerLiteral = 16
)

// MqlParser rules.
const (
	MqlParserRULE_stringVal               = 0
	MqlParserRULE_stmt                    = 1
	MqlParserRULE_getStmt                 = 2
	MqlParserRULE_setStmt                 = 3
	MqlParserRULE_columnSpec              = 4
	MqlParserRULE_tableName               = 5
	MqlParserRULE_columnFamilyName        = 6
	MqlParserRULE_valueExpr               = 7
	MqlParserRULE_cellValue               = 8
	MqlParserRULE_columnMapValue          = 9
	MqlParserRULE_superColumnMapValue     = 10
	MqlParserRULE_columnMapEntry          = 11
	MqlParserRULE_superColumnMapEntry     = 12
	MqlParserRULE_columnOrSuperColumnName = 13
	MqlParserRULE_rowKey                  = 14
	MqlParserRULE_columnOrSuperColumnKey  = 15
	MqlParserRULE_columnKey               = 16
	MqlParserRULE_superColumnKey          = 17
)

// IStringValContext is an interface to support dynamic dispatch.
type IStringValContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStringValContext differentiates from other interfaces.
	IsStringValContext()
}

type StringValContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStringValContext() *StringValContext {
	var p = new(StringValContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_stringVal
	return p
}

func (*StringValContext) IsStringValContext() {}

func NewStringValContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StringValContext {
	var p = new(StringValContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_stringVal

	return p
}

func (s *StringValContext) GetParser() antlr.Parser { return s.parser }

func (s *StringValContext) StringLiteral() antlr.TerminalNode {
	return s.GetToken(MqlParserStringLiteral, 0)
}

func (s *StringValContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StringValContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StringValContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterStringVal(s)
	}
}

func (s *StringValContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitStringVal(s)
	}
}

func (p *MqlParser) StringVal() (localctx IStringValContext) {
	localctx = NewStringValContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MqlParserRULE_stringVal)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		_la = p.GetTokenStream().LA(1)

		if !(_la == MqlParserT__0 || _la == MqlParserStringLiteral) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_stmt
	return p
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) GetStmt() IGetStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IGetStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IGetStmtContext)
}

func (s *StmtContext) SetStmt() ISetStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISetStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISetStmtContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (p *MqlParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MqlParserRULE_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(40)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case MqlParserGET:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(38)
			p.GetStmt()
		}

	case MqlParserSET:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(39)
			p.SetStmt()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IGetStmtContext is an interface to support dynamic dispatch.
type IGetStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGetStmtContext differentiates from other interfaces.
	IsGetStmtContext()
}

type GetStmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGetStmtContext() *GetStmtContext {
	var p = new(GetStmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_getStmt
	return p
}

func (*GetStmtContext) IsGetStmtContext() {}

func NewGetStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GetStmtContext {
	var p = new(GetStmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_getStmt

	return p
}

func (s *GetStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *GetStmtContext) GET() antlr.TerminalNode {
	return s.GetToken(MqlParserGET, 0)
}

func (s *GetStmtContext) ColumnSpec() IColumnSpecContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumnSpecContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumnSpecContext)
}

func (s *GetStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GetStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GetStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterGetStmt(s)
	}
}

func (s *GetStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitGetStmt(s)
	}
}

func (p *MqlParser) GetStmt() (localctx IGetStmtContext) {
	localctx = NewGetStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MqlParserRULE_getStmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(MqlParserGET)
	}
	{
		p.SetState(43)
		p.ColumnSpec()
	}

	return localctx
}

// ISetStmtContext is an interface to support dynamic dispatch.
type ISetStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSetStmtContext differentiates from other interfaces.
	IsSetStmtContext()
}

type SetStmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySetStmtContext() *SetStmtContext {
	var p = new(SetStmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_setStmt
	return p
}

func (*SetStmtContext) IsSetStmtContext() {}

func NewSetStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SetStmtContext {
	var p = new(SetStmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_setStmt

	return p
}

func (s *SetStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *SetStmtContext) SET() antlr.TerminalNode {
	return s.GetToken(MqlParserSET, 0)
}

func (s *SetStmtContext) ColumnSpec() IColumnSpecContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumnSpecContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumnSpecContext)
}

func (s *SetStmtContext) ValueExpr() IValueExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValueExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IValueExprContext)
}

func (s *SetStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SetStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SetStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterSetStmt(s)
	}
}

func (s *SetStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitSetStmt(s)
	}
}

func (p *MqlParser) SetStmt() (localctx ISetStmtContext) {
	localctx = NewSetStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MqlParserRULE_setStmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.Match(MqlParserSET)
	}
	{
		p.SetState(46)
		p.ColumnSpec()
	}
	{
		p.SetState(47)
		p.Match(MqlParserT__1)
	}
	{
		p.SetState(48)
		p.ValueExpr()
	}

	return localctx
}

// IColumnSpecContext is an interface to support dynamic dispatch.
type IColumnSpecContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_columnOrSuperColumnKey returns the _columnOrSuperColumnKey rule contexts.
	Get_columnOrSuperColumnKey() IColumnOrSuperColumnKeyContext

	// Set_columnOrSuperColumnKey sets the _columnOrSuperColumnKey rule contexts.
	Set_columnOrSuperColumnKey(IColumnOrSuperColumnKeyContext)

	// GetA returns the a rule context list.
	GetA() []IColumnOrSuperColumnKeyContext

	// SetA sets the a rule context list.
	SetA([]IColumnOrSuperColumnKeyContext)

	// IsColumnSpecContext differentiates from other interfaces.
	IsColumnSpecContext()
}

type ColumnSpecContext struct {
	*antlr.BaseParserRuleContext
	parser                  antlr.Parser
	_columnOrSuperColumnKey IColumnOrSuperColumnKeyContext
	a                       []IColumnOrSuperColumnKeyContext
}

func NewEmptyColumnSpecContext() *ColumnSpecContext {
	var p = new(ColumnSpecContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_columnSpec
	return p
}

func (*ColumnSpecContext) IsColumnSpecContext() {}

func NewColumnSpecContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ColumnSpecContext {
	var p = new(ColumnSpecContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_columnSpec

	return p
}

func (s *ColumnSpecContext) GetParser() antlr.Parser { return s.parser }

func (s *ColumnSpecContext) Get_columnOrSuperColumnKey() IColumnOrSuperColumnKeyContext {
	return s._columnOrSuperColumnKey
}

func (s *ColumnSpecContext) Set_columnOrSuperColumnKey(v IColumnOrSuperColumnKeyContext) {
	s._columnOrSuperColumnKey = v
}

func (s *ColumnSpecContext) GetA() []IColumnOrSuperColumnKeyContext { return s.a }

func (s *ColumnSpecContext) SetA(v []IColumnOrSuperColumnKeyContext) { s.a = v }

func (s *ColumnSpecContext) TableName() ITableNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITableNameContext)
}

func (s *ColumnSpecContext) ColumnFamilyName() IColumnFamilyNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumnFamilyNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumnFamilyNameContext)
}

func (s *ColumnSpecContext) RowKey() IRowKeyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRowKeyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRowKeyContext)
}

func (s *ColumnSpecContext) AllColumnOrSuperColumnKey() []IColumnOrSuperColumnKeyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IColumnOrSuperColumnKeyContext)(nil)).Elem())
	var tst = make([]IColumnOrSuperColumnKeyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IColumnOrSuperColumnKeyContext)
		}
	}

	return tst
}

func (s *ColumnSpecContext) ColumnOrSuperColumnKey(i int) IColumnOrSuperColumnKeyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumnOrSuperColumnKeyContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IColumnOrSuperColumnKeyContext)
}

func (s *ColumnSpecContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ColumnSpecContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ColumnSpecContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterColumnSpec(s)
	}
}

func (s *ColumnSpecContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitColumnSpec(s)
	}
}

func (p *MqlParser) ColumnSpec() (localctx IColumnSpecContext) {
	localctx = NewColumnSpecContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, MqlParserRULE_columnSpec)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.TableName()
	}
	{
		p.SetState(51)
		p.Match(MqlParserT__2)
	}
	{
		p.SetState(52)
		p.ColumnFamilyName()
	}
	{
		p.SetState(53)
		p.Match(MqlParserT__3)
	}
	{
		p.SetState(54)
		p.RowKey()
	}
	{
		p.SetState(55)
		p.Match(MqlParserT__4)
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == MqlParserT__3 {
		{
			p.SetState(56)
			p.Match(MqlParserT__3)
		}
		{
			p.SetState(57)

			var _x = p.ColumnOrSuperColumnKey()

			localctx.(*ColumnSpecContext)._columnOrSuperColumnKey = _x
		}
		localctx.(*ColumnSpecContext).a = append(localctx.(*ColumnSpecContext).a, localctx.(*ColumnSpecContext)._columnOrSuperColumnKey)
		{
			p.SetState(58)
			p.Match(MqlParserT__4)
		}
		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == MqlParserT__3 {
			{
				p.SetState(59)
				p.Match(MqlParserT__3)
			}
			{
				p.SetState(60)

				var _x = p.ColumnOrSuperColumnKey()

				localctx.(*ColumnSpecContext)._columnOrSuperColumnKey = _x
			}
			localctx.(*ColumnSpecContext).a = append(localctx.(*ColumnSpecContext).a, localctx.(*ColumnSpecContext)._columnOrSuperColumnKey)
			{
				p.SetState(61)
				p.Match(MqlParserT__4)
			}

		}

	}

	return localctx
}

// ITableNameContext is an interface to support dynamic dispatch.
type ITableNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTableNameContext differentiates from other interfaces.
	IsTableNameContext()
}

type TableNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTableNameContext() *TableNameContext {
	var p = new(TableNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_tableName
	return p
}

func (*TableNameContext) IsTableNameContext() {}

func NewTableNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TableNameContext {
	var p = new(TableNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_tableName

	return p
}

func (s *TableNameContext) GetParser() antlr.Parser { return s.parser }

func (s *TableNameContext) Identifier() antlr.TerminalNode {
	return s.GetToken(MqlParserIdentifier, 0)
}

func (s *TableNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TableNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TableNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterTableName(s)
	}
}

func (s *TableNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitTableName(s)
	}
}

func (p *MqlParser) TableName() (localctx ITableNameContext) {
	localctx = NewTableNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, MqlParserRULE_tableName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.Match(MqlParserIdentifier)
	}

	return localctx
}

// IColumnFamilyNameContext is an interface to support dynamic dispatch.
type IColumnFamilyNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsColumnFamilyNameContext differentiates from other interfaces.
	IsColumnFamilyNameContext()
}

type ColumnFamilyNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyColumnFamilyNameContext() *ColumnFamilyNameContext {
	var p = new(ColumnFamilyNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_columnFamilyName
	return p
}

func (*ColumnFamilyNameContext) IsColumnFamilyNameContext() {}

func NewColumnFamilyNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ColumnFamilyNameContext {
	var p = new(ColumnFamilyNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_columnFamilyName

	return p
}

func (s *ColumnFamilyNameContext) GetParser() antlr.Parser { return s.parser }

func (s *ColumnFamilyNameContext) Identifier() antlr.TerminalNode {
	return s.GetToken(MqlParserIdentifier, 0)
}

func (s *ColumnFamilyNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ColumnFamilyNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ColumnFamilyNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterColumnFamilyName(s)
	}
}

func (s *ColumnFamilyNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitColumnFamilyName(s)
	}
}

func (p *MqlParser) ColumnFamilyName() (localctx IColumnFamilyNameContext) {
	localctx = NewColumnFamilyNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, MqlParserRULE_columnFamilyName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.Match(MqlParserIdentifier)
	}

	return localctx
}

// IValueExprContext is an interface to support dynamic dispatch.
type IValueExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValueExprContext differentiates from other interfaces.
	IsValueExprContext()
}

type ValueExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValueExprContext() *ValueExprContext {
	var p = new(ValueExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MqlParserRULE_valueExpr
	return p
}

func (*ValueExprContext) IsValueExprContext() {}

func NewValueExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValueExprContext {
	var p = new(ValueExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MqlParserRULE_valueExpr

	return p
}

func (s *ValueExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ValueExprContext) CellValue() ICellValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICellValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICellValueContext)
}

func (s *ValueExprContext) ColumnMapValue() IColumnMapValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumnMapValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumnMapValueContext)
}

func (s *ValueExprContext) SuperColumnMapValue() ISuperColumnMapValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISuperColumnMapValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISuperColumnMapValueContext)
}

func (s *ValueExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValueExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ValueExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.EnterValueExpr(s)
	}
}

func (s *ValueExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MqlListener); ok {
		listenerT.ExitValueExpr(s)
	}
}

func (p *MqlParser) ValueExpr() (localctx IValueExprContext) {
	localctx = NewValueExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, MqlParserRULE_valueExpr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(71)
			p.CellValue()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(72)
			p.ColumnMapValue()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(73)
			p.SuperColumnMapValue()
		}

	}

	return localctx
}

// ICellValueContext is an interface to support dynamic dispatch.
type ICellValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCellValueContext differentiates from other interfaces.
	IsCellValueContext()
}

type CellValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
